--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.7",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0"
   },
